# fusion_org_ephys

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE.txt  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: tests.yml
analysis/: README.md
analysis/gcamp/: README.md  gcamp_detect.ipynb
analysis/mua_spikes/: README.md  mua_spikes.ipynb
figures/: README.md  rasterplots.ipynb
figures/extended_data/: drug_mfr_plots.ipynb  drug_rasterplot.ipynb
figures/main_figures/: mfr_plots.ipynb  rasterplots.ipynb
fused_org_ephys/: __init__.py
fused_org_ephys/caiman/: README.txt  caiman_jobarray.sbatch  gcamp_traces_extraction.py
fused_org_ephys/core/: __init__.py  ca_spikes.py  loader.py  metadata.py  mua_spikes.py
fused_org_ephys/curation/: __init__.py  active_channels.py
fused_org_ephys/metadata/: __init__.py  org_age.py  org_drugtimes.py
fused_org_ephys/opto/: __init__.py  opto_stim.py
fused_org_ephys/plots/: __init__.py  ca_plots.py  figure_plots.py  mua_plots.py  paper.mplstyle
fused_org_ephys/preprocessing/: __init__.py  mua_thresh.py  smooth.py
fused_org_ephys/spikes/: __init__.py  mua_spike_extractor.py  networkevents.py  spike_features.py
fused_org_ephys/utils/: __init__.py  checks.py  df_loader.py  metadata_params.py  report.py  save.py  type_conversions.py
images/: ephys_workflow.ai
test_df/: test_traces.xlsx
tests/: README.md  test_ca.py  test_metadata.py  test_mua.py
tests/test_data/gcamp/: test_traces.pickle
tests/test_data/metadata/: metadata_test.xlsx
