[metadata]
license = MIT
platforms = unix, linux, osx, cygwin, win32
license_files = LICENSE.txt
classifiers =
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[bdist_wheel]
universal = 1

[options]
packages =
    fused_org_ephys
install_requires =
    requests>=2
python_requires = >=3.9
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
tsc_ephys = py.typed # type hinted 

[flake8]
max-line-length = 120